src/engine/snapshots/rush_qdrant__engine__partitioner__tests__simple_function-2.snap
---
source: src/engine/partitioner.rs
assertion_line: 784
expression: "format_chunks_summary(&chunks, source.lines().count())"
---
=== QUALITY SCORE ===
Score: 100.0%
Total chunks: 1
Tiny chunks (<20 lines): 1
Lines: 4-4 (mean 4.0)

=== CHUNK 1 ===
Breadcrumb: @test/package:test.ts
Type: code
Kind: content
Symbol: None
Lines: 1-4
Size: 93 chars
Text preview (5 lines):

export function add(a: number, b: number): number {
    return a + b;
}
