src/engine/snapshots/rush_qdrant__engine__partitioner__tests__small_file_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 100.0%
Total chunks: 1
Small chunks (<500 chars): 1
Chars: 68-68 (mean 68)

=== CHUNK 1 ===
Breadcrumb: @test/package:tiny.ts
Type: code
Kind: content
Symbol: None
Lines: 1-4
Size: 89 chars
Text preview (5 lines):
// Small test file
export function tiny(): number {
    return 42;
}
