src/engine/snapshots/rush_qdrant__engine__partitioner__tests__small_file_visualization.snap
---
source: src/engine/partitioner.rs
assertion_line: 863
expression: visualization
---
-- [CHUNK 1] [4 lines] [68 chars] --
// Small test file
export function tiny(): number {
    return 42;
}
