src/engine/snapshots/rush_qdrant__engine__partitioner__tests__tunneled_summary.snap
---
source: src/engine/partitioner.rs
assertion_line: 860
expression: summary
---
=== QUALITY SCORE ===
Score: 99.0%
Total chunks: 3
Tiny chunks (<20 lines): 0
Lines: 49-91 (mean 77.0)

=== CHUNK 1 ===
Breadcrumb: @rushstack/playwright-browser-tunnel:TunneledBrowserConnection.ts:[fallback-split]
Type: code
Kind: content
Symbol: None
Lines: 1-49
Size: 2002 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

import type { LaunchOptions } from 'playwright-core';
import playwrightPackageJson from 'playwright-core/package.json';

=== CHUNK 2 ===
Breadcrumb: @rushstack/playwright-browser-tunnel:TunneledBrowserConnection.ts:tunneledBrowserConnection:[fallback-split]
Type: function
Kind: content
Symbol: Some("tunneledBrowserConnection")
Lines: 50-140
Size: 3712 chars
Text preview (5 lines):

  function maybeSendHandshake(): void {
    if (!handshakeSent && remoteSocket && browserName && launchOptions) {
      const handshake: IHandshake = {
        action: 'handshake',

=== CHUNK 3 ===
Breadcrumb: @rushstack/playwright-browser-tunnel:TunneledBrowserConnection.ts:tunneledBrowserConnection:[fallback-split]
Type: function
Kind: content
Symbol: Some("tunneledBrowserConnection")
Lines: 141-231
Size: 3712 chars
Text preview (5 lines):
        logger.writeDebugLine(`  Buffered messages pending: ${bufferedLocalMessages.length}`);
      });
      ws.on('error', (err: Error) => {
        logger.writeErrorLine(`Remote websocket error: ${getNormalizedErrorString(err)}`);
        logger.writeErrorLine(`  Socket readyState: ${getWebSocketReadyStateString(ws.readyState)}`);
